<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFlight">

    <EditText
        android:id="@+id/month"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Month"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/year"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/arrivalLocation" />

    <EditText
        android:id="@+id/hour"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Hour"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <EditText
        android:id="@+id/minute"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Minute"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/hour"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <EditText
        android:id="@+id/year"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Year"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalLocation" />

    <EditText
        android:id="@+id/departureLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/departure"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightId" />

    <EditText
        android:id="@+id/flightId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/flightId"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/arrivalLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/arrival"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureLocation" />

    <EditText
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/cost"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seats" />

    <Button
        android:id="@+id/addFlight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost" />

    <EditText
        android:id="@+id/seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Seats"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour" />

    <EditText
        android:id="@+id/day"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Day"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/year"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalLocation" />

    <TextView
        android:id="@+id/rez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="523dp" />

</androidx.constraintlayout.widget.ConstraintLayout>